# gex-strategy

./: .containerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Containerfile  LICENSE  README.md  SCRATCH.md  package-lock.json  package.json  potential_overfits.md  research.md  tsconfig.json
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  types.ts
docs/: architecture.md  backtest.md  live-trading.md  plan-spike-entry-timing.md  strategy.md
kube/: dev.yaml.tpl  play.sh  prod-tls.yaml.tpl  prod.yaml.tpl
kube/inc/: gateway-container.yaml.tpl  theta-container.yaml.tpl  theta-volume.yaml.tpl
scripts/: scan_tree.py
shared/: types.ts
src/: lib.rs  main_backtest.rs  main_live.rs  types.rs
src/backtest/: backtest_result.rs  calendar.rs  chart.rs  costs.rs  dashboard.rs  day_data.rs  et_format.rs  execution.rs  iv_scan.rs  metrics.rs  missed_entries.rs  mod.rs  monthly_return.rs  overfit_report.rs  positions.rs  results.rs  runner.rs  setup.rs  splits.rs  state.rs  trade_analysis.rs  types.rs
src/broker/: ibkr.rs  mod.rs  types.rs
src/config/: bar_counts.rs  bar_interval.rs  mod.rs  strategy.rs  tickers.rs
src/data/: bin_cache.rs  cache.rs  gex_builder.rs  hist.rs  mem_cache.rs  mod.rs  parquet_cache.rs  paths.rs  thetadata.rs  thetadata_hist.rs  thetadata_live.rs
src/live/: auth.rs  dashboard.rs  dashboard_types.rs  equity.rs  init.rs  live_context.rs  live_entry_candidate.rs  live_poll_policy.rs  mod.rs  nyse_session.rs  reconcile.rs  recovery.rs  (+5 more)
tests/: portfolio_nonreg.rs
(+100 files in other folders)
